# esp_http_stream_camera

./: .gitignore  CMakeLists.txt  HTTP_STREAM_README.md  README.md  api_test.py  opencv.py  opencv_viewer.py  partitions_16mb.csv  sdkconfig  sdkconfig.old  test.py  test_api1.py
components/BSP/: CMakeLists.txt  bsp_camera.c  bsp_i2cbus.c  bsp_lcd.c  bsp_lvgl.c  bsp_pca9557.c  bsp_touch.c  bsp_ui.c
components/BSP/inc/: bsp_camera.h  bsp_i2cbus.h  bsp_lcd.h  bsp_lichuang.h  bsp_lvgl.h  bsp_pca9557.h  bsp_touch.h  bsp_ui.h
components/human_detect/: CMakeLists.txt  detection.c  middle_human_detect.cpp
components/human_detect/inc/: detection.h
main/: CMakeLists.txt  config_server.c  config_server.h  esp_cam.c  esp_cam.h  http_server.c  http_server.h  idf_component.yml  main.c  mdns_service.c  mdns_service.h  network.c  network.h  wifi_config.c  wifi_config.h  wifi_manager.c  wifi_manager.h
